footer links corrected

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,15 +23,15 @@
       <div class="div-block-4">
         <div class="div-block-3">
           <div class="text-block-14"><strong class="bold-text">Learn About</strong></div>
-          <a href="location/toronto.html" class="footer-link">Toronto</a>
+          <a href="/location/" class="footer-link">Toronto</a>
           <a href="/accessibility/" class="footer-link">Accessibility</a>
-          <a href="code-of-conduct.html" aria-current="page" class="footer-link w--current">Code of Conduct</a>
+          <a href="/code-of-conduct/" aria-current="page" class="footer-link w--current">Code of Conduct</a>
         </div>
         <div class="div-block-3">
           <div class="text-block-13"><strong class="bold-text">Important Links</strong></div>
           <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="footer-link">Get your ticket</a>
           <!-- <a href="/sponsorship/" class="footer-link">Partner with us</a> -->
-          <a href="program/cfp.html" class="footer-link">Call for proposals</a>
+          <a href="/cfp/" class="footer-link">Call for proposals</a>
         </div>
         <div class="footer-social-links">
           <div class="bold-text"><strong>Social</strong></div>
